kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision14.sem

function Bar.Adapter(): Integer {
  Integer."1"
}

interface Bar {
  a(): Integer
}
